[wheel]
universal = 1

[metadata]
name = dpvprot
version = 0.0.1
author = Tom McDermott
author_email = Thomas.McDermott@PNNL.gov
description = dpvprot: Models and analysis tools for protection of distribution circuits with large amounts of solar photovoltaic generation.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
license = BSD
url = https://github.com/pnnl/dpvprot
project_urls =
    Bug Tracker = https://github.com/pnnl/dpvprot/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
install_requires =
    networkx>=2.5
    matplotlib>=3.4.2
    numpy>=1.20.2
    scipy>=1.6.2
    pandas>=1.2.3
    python-docx>=0.8.10

[options.packages.find]
where = src
